mutants.out/log/src__proto__single__cmd.rs_line_237_col_9.log

*** src/proto/single/cmd.rs:237:9: replace <impl Deref for Push>::deref -> &Self::Target with &Default::default()

*** mutation diff:
--- src/proto/single/cmd.rs
+++ replace <impl Deref for Push>::deref -> &Self::Target with &Default::default()
@@ -229,17 +229,17 @@
 // --------------------- PUSH --------------------
 
 pub(crate) struct Push(Job);
 
 use std::ops::Deref;
 impl Deref for Push {
     type Target = Job;
     fn deref(&self) -> &Self::Target {
-        &self.0
+        &Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl From<Job> for Push {
     fn from(j: Job) -> Self {
         Push(j)
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `Job: Default` is not satisfied
   --> src/proto/single/cmd.rs:237:10
    |
237 |         &Default::default() /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Job`
    |
help: consider annotating `Job` with `#[derive(Default)]`
   --> src/proto/single/mod.rs:71:1
    |
71  + #[derive(Default)]
72  | pub struct Job {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `single::Job: Default` is not satisfied
   --> src/proto/single/cmd.rs:237:10
    |
237 |         &Default::default() /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `single::Job`
    |
help: consider annotating `single::Job` with `#[derive(Default)]`
   --> src/proto/single/mod.rs:71:1
    |
71  + #[derive(Default)]
72  | pub struct Job {
    |

error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
